@@ -1,0 +1,5 @@
+w <- gwindow()
+pg <- gpanedgroup(cont=w, horizontal=TRUE)
+gbutton("left", cont=pg)
+gbutton("right", cont=pg)
+
