@@ -1,3 +1,8 @@
+2013-10-16  Johannes Ranke<jranke@uni-bremen.de> for mkin (0.9-22)
+
+	* Unify naming of initial values of state variables
+	* Unify naming in dataframes of optimised and fixed parameters in the summary
+
 2013-10-10  Johannes Ranke<jranke@uni-bremen.de> for mkin (0.9-22)
 
 	* Show the weighting method for residuals in the summary
